# parssie

./: README.md  pyproject.toml
src/parssie/: __init__.py  main.py  mainwindow.ui  uiloader.py
src/ui/: mainwindow.ui
